[package]
name = "rust-15-puzzle-cli"
version = "0.1.1"
authors = ["24seconds <24crazyoung@gmail.com>"]
description = """
rust-15-puzzle-cli is 15puzzle terminal game written in Rust!
"""
homepage = "https://github.com/24seconds/rust-15-puzzle-cli"
repository = "https://github.com/24seconds/rust-15-puzzle-cli"
readme = "README.md"
keywords = ["15-puzzle", "terminal-app"]
categories = ["command-line-utilities", "games"]
edition = "2018"
license = "Beerware"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
termion = "1.5.5"
tui="0.9.1"